--- a/week3.ipynb
+++ b/week3.ipynb
@@ -54,6 +54,7 @@
    "source": [
     "Postal_codes = []\n",
     "Boroughs = []\n",
+    "Neighbourhoodsraw = []\n",
     "Neighbourhoods = []\n",
     "\n",
     "for row in table.findAll('tr'):\n",
@@ -61,12 +62,12 @@
     "    if len(cells)==3:\n",
     "        Postal_codes.append(cells[0].find(text=True))\n",
     "        Boroughs.append(cells[1].find(text=True))\n",
-    "        Neighbourhoods.append(cells[2].find(text=True))\n",
+    "        Neighbourhoodsraw.append(cells[2].find(text=True))\n",
     "\n",
     "df = pd.DataFrame()\n",
     "df['Postal Codes'] = Postal_codes\n",
     "df['Borough'] = Boroughs\n",
-    "df['Neighbourhood'] = Neighbourhoods"
+    "df['Neighbourhood'] = Neighbourhoodsraw"
    ]
   },
   {
@@ -89,7 +90,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For values in not assigned in Neighbourhood column, assign the same Borough value"
+    "For values in not assigned in Neighbourhood column, assign the same Borough value.\n",
+    "Then remove \\n from strings "
    ]
   },
   {
@@ -100,7 +102,24 @@
    "source": [
     "for i, j in df.iterrows():\n",
     "    if j['Neighbourhood'] == 'Not assigned\\n':\n",
-    "        j['Neighbourhood'] = j['Borough']\n"
+    "        j['Neighbourhood'] = j['Borough']\n",
+    "        \n",
+    "for i in df['Neighbourhood']:\n",
+    "    if '\\n' in i:\n",
+    "        i = i[:-1]\n",
+    "        Neighbourhoods.append(i)\n",
+    "    else:\n",
+    "        Neighbourhoods.append(i)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Neighbourhood'] = Neighbourhoods"
    ]
   },
   {
@@ -112,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,15 +139,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Final product"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +186,7 @@
        "      <td>2</td>\n",
        "      <td>M1E</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Guildwood\\n, Morningside, West Hill</td>\n",
+       "      <td>Guildwood, Morningside, West Hill</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -186,7 +198,7 @@
        "      <td>4</td>\n",
        "      <td>M1H</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Cedarbrae\\n</td>\n",
+       "      <td>Cedarbrae</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -204,25 +216,25 @@
        "      <td>99</td>\n",
        "      <td>M9P</td>\n",
        "      <td>Etobicoke</td>\n",
-       "      <td>Westmount\\n</td>\n",
+       "      <td>Westmount</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>100</td>\n",
        "      <td>M9R</td>\n",
        "      <td>Etobicoke</td>\n",
-       "      <td>Kingsview Village, Martin Grove Gardens\\n, Ric...</td>\n",
+       "      <td>Kingsview Village, Martin Grove Gardens, Richv...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>101</td>\n",
        "      <td>M9V</td>\n",
        "      <td>Etobicoke</td>\n",
-       "      <td>Albion Gardens\\n, Beaumond Heights, Humbergate...</td>\n",
+       "      <td>Albion Gardens, Beaumond Heights, Humbergate, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>102</td>\n",
        "      <td>M9W</td>\n",
        "      <td>Etobicoke</td>\n",
-       "      <td>Northwest\\n</td>\n",
+       "      <td>Northwest</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -246,20 +258,20 @@
        "                                         Neighbourhood  \n",
        "0                                       Rouge, Malvern  \n",
        "1               Highland Creek, Rouge Hill, Port Union  \n",
-       "2                  Guildwood\\n, Morningside, West Hill  \n",
+       "2                    Guildwood, Morningside, West Hill  \n",
        "3                                               Woburn  \n",
-       "4                                          Cedarbrae\\n  \n",
+       "4                                            Cedarbrae  \n",
        "..                                                 ...  \n",
        "98                                              Weston  \n",
-       "99                                         Westmount\\n  \n",
-       "100  Kingsview Village, Martin Grove Gardens\\n, Ric...  \n",
-       "101  Albion Gardens\\n, Beaumond Heights, Humbergate...  \n",
-       "102                                        Northwest\\n  \n",
+       "99                                           Westmount  \n",
+       "100  Kingsview Village, Martin Grove Gardens, Richv...  \n",
+       "101  Albion Gardens, Beaumond Heights, Humbergate, ...  \n",
+       "102                                          Northwest  \n",
        "\n",
        "[103 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +291,7 @@
        "(103, 3)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,6 +299,335 @@
    "source": [
     "df.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use Geocoder to get longitude/latitude\n",
+    "Since both dataframes are grouped by Postal Code, we can copy the two wanted columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locations = pd.read_csv('Geospatial_Coordinates.csv') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>M1B</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>M1C</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>M1E</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>M1G</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>M1H</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>98</td>\n",
+       "      <td>M9N</td>\n",
+       "      <td>43.706876</td>\n",
+       "      <td>-79.518188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>99</td>\n",
+       "      <td>M9P</td>\n",
+       "      <td>43.696319</td>\n",
+       "      <td>-79.532242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>100</td>\n",
+       "      <td>M9R</td>\n",
+       "      <td>43.688905</td>\n",
+       "      <td>-79.554724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>101</td>\n",
+       "      <td>M9V</td>\n",
+       "      <td>43.739416</td>\n",
+       "      <td>-79.588437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>102</td>\n",
+       "      <td>M9W</td>\n",
+       "      <td>43.706748</td>\n",
+       "      <td>-79.594054</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Postal Code   Latitude  Longitude\n",
+       "0           M1B  43.806686 -79.194353\n",
+       "1           M1C  43.784535 -79.160497\n",
+       "2           M1E  43.763573 -79.188711\n",
+       "3           M1G  43.770992 -79.216917\n",
+       "4           M1H  43.773136 -79.239476\n",
+       "..          ...        ...        ...\n",
+       "98          M9N  43.706876 -79.518188\n",
+       "99          M9P  43.696319 -79.532242\n",
+       "100         M9R  43.688905 -79.554724\n",
+       "101         M9V  43.739416 -79.588437\n",
+       "102         M9W  43.706748 -79.594054\n",
+       "\n",
+       "[103 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Latitude'] = locations['Latitude']\n",
+    "df['Longitude'] = locations['Longitude']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Codes</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge, Malvern</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Highland Creek, Rouge Hill, Port Union</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>M1E</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Guildwood, Morningside, West Hill</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>M1G</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Woburn</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>M1H</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Cedarbrae</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>98</td>\n",
+       "      <td>M9N</td>\n",
+       "      <td>York</td>\n",
+       "      <td>Weston</td>\n",
+       "      <td>43.706876</td>\n",
+       "      <td>-79.518188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>99</td>\n",
+       "      <td>M9P</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Westmount</td>\n",
+       "      <td>43.696319</td>\n",
+       "      <td>-79.532242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>100</td>\n",
+       "      <td>M9R</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Kingsview Village, Martin Grove Gardens, Richv...</td>\n",
+       "      <td>43.688905</td>\n",
+       "      <td>-79.554724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>101</td>\n",
+       "      <td>M9V</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Albion Gardens, Beaumond Heights, Humbergate, ...</td>\n",
+       "      <td>43.739416</td>\n",
+       "      <td>-79.588437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>102</td>\n",
+       "      <td>M9W</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Northwest</td>\n",
+       "      <td>43.706748</td>\n",
+       "      <td>-79.594054</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Postal Codes      Borough  \\\n",
+       "0            M1B  Scarborough   \n",
+       "1            M1C  Scarborough   \n",
+       "2            M1E  Scarborough   \n",
+       "3            M1G  Scarborough   \n",
+       "4            M1H  Scarborough   \n",
+       "..           ...          ...   \n",
+       "98           M9N         York   \n",
+       "99           M9P    Etobicoke   \n",
+       "100          M9R    Etobicoke   \n",
+       "101          M9V    Etobicoke   \n",
+       "102          M9W    Etobicoke   \n",
+       "\n",
+       "                                         Neighbourhood   Latitude  Longitude  \n",
+       "0                                       Rouge, Malvern  43.806686 -79.194353  \n",
+       "1               Highland Creek, Rouge Hill, Port Union  43.784535 -79.160497  \n",
+       "2                    Guildwood, Morningside, West Hill  43.763573 -79.188711  \n",
+       "3                                               Woburn  43.770992 -79.216917  \n",
+       "4                                            Cedarbrae  43.773136 -79.239476  \n",
+       "..                                                 ...        ...        ...  \n",
+       "98                                              Weston  43.706876 -79.518188  \n",
+       "99                                           Westmount  43.696319 -79.532242  \n",
+       "100  Kingsview Village, Martin Grove Gardens, Richv...  43.688905 -79.554724  \n",
+       "101  Albion Gardens, Beaumond Heights, Humbergate, ...  43.739416 -79.588437  \n",
+       "102                                          Northwest  43.706748 -79.594054  \n",
+       "\n",
+       "[103 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
