--- a/Week_4_capstone.ipynb
+++ b/Week_4_capstone.ipynb
@@ -40,11 +40,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "For example, looking at the zoocasa table, Morningside's average housing cost went from $262,721 to $452,240 from 2014 to 2019. \n",
+    "\n",
+    "The most common venues provided by Foursquare are: \n",
+    "\n",
+    "----Morningside----\n",
+    "                 venue  freq\n",
+    "0         Intersection  0.14\n",
+    "1       Medical Center  0.14\n",
+    "2       Breakfast Spot  0.14\n",
+    "3   Mexican Restaurant  0.14\n",
+    "4  Rental Car Location  0.14\n",
+    "\n",
+    "This process will be repeated for all neighborhoods, and trends will be investigated. "
+   ]
   }
  ],
  "metadata": {
